package edu.fiuba.algo3.modelo;

public interface Daniable {
    public void recibirDanio(int danio);
}
